src/test/resources/public/input/typechecking/fail/incorrect_operand/fail07.jova
class Test{

}

class Main {

  public int main() {
    int result;
    bool b;
    result = 1;
    b = result == "my test";
    return 0;
  }

}